SUBDIRS = icons themes

# The desktop files
desktopdir = $(datadir)/applications
desktop_DATA = \
    cpufreq-manager.desktop \
    $(NULL)

splashdir=$(datadir)/gnome-shell/extensions/cpufreq@konkor/data/
splash_DATA= \
    splash.svg


EXTRA_DIST = \
    $(desktop_DATA) \
    $(splash_DATA) \
    $(NULL)
