#common ui classes
commondir = $(datadir)/gnome-shell/extensions/cpufreq@konkor/common/ui
common_DATA = \
    ControlPanel.js \
    InfoPanel.js \
    MainWindow.js \
    ProfileItems.js \
    SideMenu.js \
    Widgets.js \
    BenchmarksView.js \
    SensorsView.js \
    $(NULL)


EXTRA_DIST = \
    $(common_DATA)
